--- a/Antoni/app/package.json
+++ b/Antoni/app/package.json
@@ -9,10 +9,12 @@
   "author": "Antoni Huguet Vives",
   "license": "ISC",
   "devDependencies": {
+    "babel-preset-es2015": "^6.18.0",
+    "babelify": "^7.3.0",
     "browserify": "^13.1.0",
     "gulp": "^3.9.1",
     "gulp-sass": "^2.3.2",
-    "gulp-sourcemaps": "^1.6.0",
+    "gulp-sourcemaps": "^1.9.0",
     "gulp-typescript": "^3.0.2",
     "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.7",
